# AI-Based-Attendance-System-Backend-

./: .env  README.md  pyproject.toml
Additional Information/: Database Tables.sql  Starting Procedure.txt
app/: main.py
app/api/routes/: attendance.py  health.py  users.py
app/core/: config.py  dependencies.py
app/db/: session.py
app/models/: attendance_log.py  face_embedding.py  user.py
app/services/: attendance_service.py  face_service.py
