[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "insightface>=0.7.3",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.13.0.92",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pythonnet>=3.0.5",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
